# substrate-playground

./: .dockerignore  .editorconfig  .env  .env.production  .env.staging  .gitignore  64d5a264-de43-4a21-ae92-715d3b2632c3  Dockerfile  Dockerfile-openvscode  Dockerfile.base  Makefile  PROM  README.md  deployment-lb.yaml  deployment-ssl.yaml  deployment.yaml  deployment.yaml.tmpl  docker-compose.yaml  docker-compose.yml  package-lock.json
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Playground.toml  README.md  Rocket.toml  rust-toolchain
backend/api/: README.md  environment.d.ts  index.ts  package.json  tsconfig.browser.json  tsconfig.json
backend/api/dist.browser/: index.js
backend/conf/: add-theia-path.json  deployment.json  deployment.yaml  remove-theia-path.json  service.json  service.yaml
backend/node-client/: README.md  environment.d.ts  index.ts  package.json  tsconfig.browser.json  tsconfig.json
backend/src/: api.rs  error.rs  github.rs  kubernetes.rs  kubernetes_utils.rs  lib.rs  main.rs  manager.rs  metrics.rs  prometheus.rs  repository.rs  session.rs  template.rs  types.rs  user.rs  utils.rs
backend/src/kubernetes/: editor.rs  mod.rs  pool.rs  preference.rs  profile.rs  repository.rs  repository_version.rs  role.rs  session.rs  template.rs  user.rs  workspace.rs
backend/src/platform/: docker.rs  kubernetes.rs  mod.rs
backend/src/utils/: devcontainer.rs  git.rs  github.rs  http.rs  jsonc.rs  mod.rs
cli/: README.md  TODO.md  index.js  package-lock.json  package.json  tsconfig.json  ui.js
client/: README.md  package.json  tsconfig.browser.json  tsconfig.json
conf/: Dockerfile  deployment.yaml-gke.tmpl  deployment.yaml.tmpl  nginx.yaml  profile.d  prometheus.yaml
docs/: ARCHITECTURE.md  BUILD.md  CICD.md  CUSTOM_TEMPLATE.md  DEPLOYMENT.md  DEVELOPMENT.md  EXTEND.md  INTEGRATION.md  INTRO.md  MONITORING.md  SECURITY.md  SUMMARY.md  TODO.md  TUTORIAL.md  WORKSPACE.md  book.toml
e2e/: README.md  ava.config.js  package.json  tsconfig.json
frontend/: .dockerignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  Dockerfile  README.md  ava.config.js  package-lock.json  package.json  tsconfig.json
resources/: Dockerfile.base
scripts/: README.md  load-balancer-ip.sh  package.json
templates/: .dockerignore  Dockerfile  Dockerfile copy  Dockerfile.base  Dockerfile.example  Dockerfile.openvscode-template  README.md  (+6 more)
(+328 files in other folders)
