[package]
name = "playground"
version = "0.1.0"
authors = ["jeluard <julien@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
prometheus = "0.13.1"
hyper = "0.14.20"
hyper-rustls = "0.23.0"
json-patch = "0.2.6"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.82"
kube = { version = "0.74.0", default-features = false, features = ["client", "jsonpatch", "ws", "rustls-tls"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_23"] }
tokio-util = "0.7.2"
thiserror = "1.0.31"
futures = "0.3"
base64 = "0.13"
rand = { version = "0.8", default-features = false, features = ["std"] }
url = "2.0"
