[package]
name = "playground"
version = "0.1.0"
authors = ["jeluard <julien@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
prometheus = "0.13.2"
hyper = "0.14.20"
hyper-rustls = "0.23.0"
json-patch = "0.2.6"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
kube = { version = "0.75.0", default-features = false, features = ["client", "jsonpatch", "ws", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_23"] }
tokio-util = "0.7.4"
thiserror = "1.0.35"
futures = "0.3.24"
base64 = "0.13"
rand = { version = "0.8", default-features = false, features = ["std"] }
url = "2.3"
